--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: Deadreyo # Your GitHub organization or username, where this repository lives
-repo: upptime-test # The name of this repository
+repo: status.opensauced # The name of this repository
 
 sites:
   - name: Google
@@ -19,11 +19,11 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  baseUrl: /upptime-test
+  baseUrl: /status.opensauced
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: OpenSauced Status
+  introTitle: "**OpenSauced** is a platform for open source contributors to find and maintain their next contribution."
+  introMessage: This is the status.opensauced.pizza site, where you can see the status of all the OpenSauced websites, and outages are automatically reported. Uses [Upptime](https://github.com/upptime/upptime)
   navbar:
     - title: Status
       href: ./
