--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: Deadreyo # Your GitHub organization or username, where this repository lives
-repo: status.opensauced # The name of this repository
+owner: open-sauced # Your GitHub organization or username, where this repository lives
+repo: status # The name of this repository
 
 sites:
   - name: hot.opensauced.pizza
@@ -17,7 +17,7 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  baseUrl: /status.opensauced
+  baseUrl: /status
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: OpenSauced Status
   introTitle: "**OpenSauced** is a platform for open source contributors to find and maintain their next contribution."
