--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
-# Change these first
-owner: open-sauced # Your GitHub organization or username, where this repository lives
-repo: status # The name of this repository
+owner: open-sauced
+repo: status
+user-agent: open-sauced
 
 sites:
   - name: hot.opensauced.pizza
@@ -15,21 +15,22 @@ sites:
     url: https://explore.opensauced.pizza/
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
+  theme: dark
   cname: status.opensauced.pizza
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: OpenSauced Status
+  logoUrl: https://hot.opensauced.pizza/static/openSauced.9ade9e5f.svg
+  name: OpenSauced Status Monitor
   introTitle: "**OpenSauced** is a platform for open source contributors to find and maintain their next contribution."
   introMessage: This is the status.opensauced.pizza site, where you can see the status of all the OpenSauced websites, and outages are automatically reported. Uses [Upptime](https://github.com/upptime/upptime)
   navbar:
     - title: Status
       href: ./
-    - title: GitHub
+    - title: GitHub Repo
       href: https://github.com/$OWNER/$REPO
-  theme: dark
+    - title: Open Sauced Org
+      href: https://github.com/$OWNER
+  commitMessages:
+    commitAuthorName: "0-vortex"
+    commitAuthorEmail: "237133+0-vortex@users.noreply.github.com"
 
-# Upptime also supports notifications, assigning issues, and more
-# See https://upptime.js.org/docs/configuration
 assignees:
   - 0-vortex
