--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,7 +15,7 @@ sites:
     url: https://explore.opensauced.pizza/
 
 status-website:
-  theme: dark
+  theme: night
   cname: status.opensauced.pizza
   logoUrl: https://hot.opensauced.pizza/static/openSauced.9ade9e5f.svg
   name: OpenSauced Status Monitor
